--- a/t/api-rest2/BillingProfiles.yaml
+++ b/t/api-rest2/BillingProfiles.yaml
@@ -66,9 +66,70 @@
         name: test api name 3 ${unique_id}
     retain:
         billingprofile_path3: header.location
+        billingprofile3_id: header.location
     conditions:
         is:
             code: 201
+
+#test item journal link
+-
+    name: test item journal link
+    type: item
+    method: GET
+    path: /${billingprofile_path3}
+    retain:
+        billingprofile: body
+    perl_code: !!perl/code |
+        {
+            my ($retained) = @_;
+            $retained->{href} = $retained->{billingprofile}->{_links}->{'ngcp:journal'}->[0]->{href};
+            $retained->{expected_href} = '/api/billingprofiles/'.$retained->{billingprofile3_id}.'/journal/';
+        }
+    conditions:
+        is:
+            code: 200
+        ok:
+            '${billingprofile}._links': defined
+            '${billingprofile}._links.ngcp:journal': defined
+            '${href}': '${expected_href}'
+
+#test journal options
+-
+    name: test journal options
+    type: item
+    method: OPTIONS
+    path: '/${billingprofile_path3}/journal'
+    conditions:
+        is:
+            code: 200
+        ok:
+            options:
+                - GET
+                - HEAD
+                - OPTIONS
+
+#test journal head
+-
+    name: test journal head
+    type: item
+    method: HEAD
+    path: '/${billingprofile_path3}/journal'
+    conditions:
+        is:
+            code: 200
+
+#TestJournalTopJournalItem
+-
+    name: include TestJournalTopJournalItem
+    type: include
+    file: TestJournalTopJournalItem.yaml
+    perl_code: !!perl/code |
+        {
+            my ($retained) = @_;
+            $retained->{journal_link} = '/api/billingprofiles/' . $retained->{billingprofile3_id} . '/journal/recent';
+            $retained->{resource} = 'billingprofiles';
+            $retained->{item} = $retained->{billingprofile};
+        }
 
 #verify pagination
 -
@@ -534,3 +595,43 @@
             code: 200
         is_deeply:
             '${peaktimes_special_billingprofile}': ${new_billingprofile}
+
+#DELETE billingprofile
+-
+    name: DELETE billingprofile
+    type: item
+    method: DELETE
+    path: '/${billingprofile_path2}'
+    conditions:
+        is:
+            code: 204
+
+#DELETE billingprofile
+-
+    name: DELETE billingprofile
+    type: item
+    method: DELETE
+    path: '/${billingprofile_path3}'
+    conditions:
+        is:
+            code: 204
+
+#DELETE billingprofile
+-
+    name: DELETE billingprofile
+    type: item
+    method: DELETE
+    path: '/${peaktimes_weekday_billingprofile_path}'
+    conditions:
+        is:
+            code: 204
+
+#DELETE billingprofile
+-
+    name: DELETE billingprofile
+    type: item
+    method: DELETE
+    path: '/${peaktimes_special_billingprofile_path}'
+    conditions:
+        is:
+            code: 204
