TT#69150 Switch to use IO::Prompt::Tiny
We use this module which is more lightweight and has less issues.

Change-Id: I93f0f2d15ee4cc208254eb6ad6cd6c8454d922fa

--- a/debian/control
+++ b/debian/control
@@ -155,7 +155,7 @@ Section: admin
 Architecture: all
 Depends:
  curl,
- libio-prompter-perl,
+ libio-prompt-tiny-perl,
  libmoose-perl,
  libngcp-api-client-perl,
  libredis-perl,
