TT#51701 Switch from deprecated /var/run to /run
Change-Id: Ib7302bf3a4e2ec9005293d2bbd79849c2173b04a

--- a/debian/ngcp-panel.service
+++ b/debian/ngcp-panel.service
@@ -13,8 +13,8 @@ User=www-data
 Group=www-data
 RuntimeDirectory=fastcgi
 RuntimeDirectoryPreserve=yes
-PIDFile=/var/run/fastcgi/ngcp-panel.pid
-ExecStart=/usr/share/ngcp-panel/ngcp_panel_fastcgi.pl --listen /var/run/fastcgi/ngcp-panel.sock --pidfile /var/run/fastcgi/ngcp-panel.pid --nproc $NPROC
+PIDFile=/run/fastcgi/ngcp-panel.pid
+ExecStart=/usr/share/ngcp-panel/ngcp_panel_fastcgi.pl --listen /run/fastcgi/ngcp-panel.sock --pidfile /run/fastcgi/ngcp-panel.pid --nproc $NPROC
 
 [Install]
 WantedBy=multi-user.target
