TT#69503 - Change subscriber's domain assignation logic
	 * Only allow to assign domains for subscribers
	   from the same reseller as subscriber's customer

	 * Change Subscribers.yaml test to retrieve a
	   domain for testing from the same reseller
	   as subscriber's customer

Change-Id: I6c7cc7a9874207cfcd63360a6f87e2fd6841011c

--- a/t/api-rest2/Subscribers.yaml
+++ b/t/api-rest2/Subscribers.yaml
@@ -22,7 +22,7 @@
     name: get a domain for testing
     type: item
     method: GET
-    path: '/api/domains/?page=1&rows=1&order_by=id&order_by_direction=desc'
+    path: '/api/domains/?page=1&rows=1&order_by=id&order_by_direction=desc&reseller_id=1'
     retain:
         domain: body
     perl_code: !!perl/code |
