TT#73364 batch provisioning/provisioning templates WIP
Change-Id: I0c3c1ef93bbe0ca926bbe906a35346bef5094fac

--- a/debian/control
+++ b/debian/control
@@ -60,6 +60,7 @@ Depends:
  libemail-mime-perl,
  libemail-sender-perl,
  libemail-valid-perl,
+ libeval-closure-perl,
  libfcgi-procmanager-perl,
  libfile-fnmatch-perl,
  libfile-slurp-perl,
