TT#72900 fee onoffpeak usefreetime
Change-Id: Iab78a5892a6fb1b70df46a3691ba39644d96b89a

--- a/etc/ngcp_panel.conf
+++ b/etc/ngcp_panel.conf
@@ -121,12 +121,13 @@ log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{
   element_order  offpeak_init_interval
   element_order  offpeak_follow_rate
   element_order  offpeak_follow_interval
-  element_order  use_free_time
+  element_order  onpeak_use_free_time
   element_order  match_mode
   element_order  onpeak_extra_rate
   element_order  onpeak_extra_second
   element_order  offpeak_extra_rate
   element_order  offpeak_extra_second
+  element_order  offpeak_use_free_time
 </fees_csv>
 
 <sip>
