TT#75114 javascript support for prov templates
Change-Id: I6f173ba6dd814f9be84bc3f077e8595e56d993c5
(cherry picked from commit f66435c837d5d47b9b5a79340dd4a832b2857e27)

--- a/debian/control
+++ b/debian/control
@@ -77,6 +77,7 @@ Depends:
  libio-socket-ip-perl,
  libipc-run3-perl,
  libipc-system-simple-perl,
+ libje-perl,
  libjson-multivalueordered-perl,
  libjson-perl,
  libjson-pointer-perl,
