--- a/debian/control
+++ b/debian/control
@@ -151,3 +151,18 @@ Description: tools from ngcp-panel application
  A completely overhauled provisioning interface for the NGCP system.
  .
  This package contains some helper tools from ngcp-panel
+
+Package: ngcp-api-testframework
+Section: admin
+Architecture: all
+Depends:
+ libcpanel-json-xs-perl,
+ libdata-walk-perl,
+ libdatetime-format-iso8601-perl,
+ libdatetime-format-strptime-perl,
+ liblog-log4perl-perl,
+ libmoose-perl,
+ liburi-perl,
+ libwww-perl,
+ libyaml-libyaml-perl,
+Description: TestFramework for testing NGCP API functionalities.
